<resources>
    <string name="app_name">Intento2</string>
    <string name="universicar">UNIVERSICAR</string>
    <string name="nombre">Nombre:</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="nombre2">Nombre</string>
    <string name="destino">Destino</string>
    <string name="Destino2">Destino:</string>
    <string name="origen">origen</string>
    <string name="numero_de_telefono">numero de telefono</string>
    <string name="Origen">Origen</string>
    <string name="Origen2">Origen:</string>
    <string name="buscar">Buscar</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="crear">crear</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="Crear_Viaje">Crear Viaje</string>
    <string name="Buscar_Viaje">Buscar Viaje</string>
    <string name="Menu_Inicial">Menu Inicial</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="email">Email</string>
    <string name="precio">Precio</string>
    <string name="nAsientos">Numero De Asientos</string>
    <string name="numero_asientos">Numero Asientos</string>
    <string name="lista_viajes">Viajes</string>
    <string name="viajes_disponibles">Viajes Disponibles</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="srcPlaceCreate">srcPlaceCreate</string>
    <string name="vehicle_title">Informacion sobre tu coche</string>
    <string name="vehicle_brand_desc">¿Cual es la marca de tu coche?</string>
    <string name="vehicle_type_desc">¿Que tipo de coche tienes?</string>
    <string name="vehicle_color_desc">¿De que color es?</string>
    <string name="info_viaje">Informacion sobre viaje</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="anadir_coche">Añadir Coche</string>
    <string name="conductor">Conductor</string>
    <string name="reservar">Reservar</string>
    <string name="text_viajes">Viajes</string>
    <string name="textbuscar">Buscar</string>
    <string name="text_crear">Crear</string>
    <string name="travel_not_found">Aún no hay viajes disponibles para este día</string>
    <string name="viajes_no_disponibles">Viajes no disponibles</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="todav_a_no_tienes_una_cuenta_registrate">¿Todavía no tienes una cuenta?Registrate</string>
    <string name="registrarse">Registrarse</string>
    <string name="perfil">Perfil</string>
</resources>
