<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/viajesMenu"
        android:enabled="true"
        android:icon="@drawable/ic_house"
        android:title="@string/text_viajes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/buscarMenu"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_30dp"
        android:title="@string/textbuscar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/crearMenu"
        android:enabled="true"
        android:icon="@drawable/ic_add_black_30dp"
        android:title="@string/text_crear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/misViajesMenu"
        android:enabled="true"
        android:icon="@drawable/ic_road_black_35dp"
        android:title="Mis Viajes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/perfilMenu"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_blue_30dp"
        android:title="@string/perfil"
        app:showAsAction="ifRoom" />
</menu>