<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioBuscar">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:fontFamily="cursive"
        android:text="@string/Buscar_Viaje"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:datePickerMode="calendar"
        android:background="@color/white"
        tools:targetApi="lollipop" />



    <LinearLayout
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:text="@string/destino" />

        <Spinner
            android:id="@+id/searchDestPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="InvalidId" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:text="@string/Origen" />

        <Spinner
            android:id="@+id/searchSrcPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha"
            android:importantForAutofill="no"
            android:inputType="date" />

        <EditText
            android:id="@+id/hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hora"
            android:importantForAutofill="no"
            android:inputType="time" />

    </LinearLayout>

    <Button
        android:id="@+id/searchSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar" />

</LinearLayout>