<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/button"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            android:clickable="true"
            android:src="@drawable/ic_keyboard_backspace_white_24dp"
            android:focusable="true"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/vehicle_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            tools:ignore="RtlCompat" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/vehicle_brand_desc"
        android:drawableTop="@drawable/ic_directions_car_black_30dp"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/brandSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/vehicle_type_desc"
        android:drawableTop="@drawable/ic_directions_car_black_30dp"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/vehicle_color_desc"
        android:drawableTop="@drawable/ic_palette_black_30dp"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"/>


</LinearLayout>