<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:background="#1dd1a1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salsa"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Iniciar Sesion"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/salsa"
        android:text="@string/iniciar_sesion"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/secTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100sp" />
    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="7dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/thirdTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="100dp" />
    <EditText
        android:id="@+id/pwdLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="7dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:ems="10"
        android:autofillHints="password"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:backgroundTint="#1dd1a1"
        android:text="Iniciar Sesion" />

    <TextView android:id="@+id/lnkLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:padding="20dp"
        android:text="@string/todav_a_no_tienes_una_cuenta_registrate"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#3F51B5" />
</LinearLayout>