<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/Settings_phoneNumbersLbl"
        android:orientation="horizontal"
        android:background="#1dd1a1">

        <ImageButton
            android:id="@+id/backBtnCrearViaje3"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="Back"
            android:focusable="true"
            android:src="@drawable/ic_keyboard_backspace_white_24dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salsa"
            android:text="Crear Viaje"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/srcPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/baloo_bhai"
            android:gravity="center"
            android:text="@string/Origen"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/destPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/baloo_bhai"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/destino" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_origen_crear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="25dp"/>

        <Spinner
            android:id="@+id/spinner_destino_crear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:padding="25dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="6"
        android:hint="@string/precio"
        android:textSize="19sp"
        android:textAlignment="center"
        android:drawableEnd="@drawable/ic_euro_symbol_black_24dp"
        android:inputType="numberDecimal" />


    <EditText
        android:id="@+id/nAsientos"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="19sp"
        android:ems="6"
        android:textAlignment="center"
        android:hint="@string/nAsientos"
        android:drawableEnd="@drawable/ic_group_black_24dp"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/submit3"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="17sp"
        android:backgroundTint="#1dd1a1"
        android:text="Crear Viaje" />



</LinearLayout>