<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/block1"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/Settings_phoneNumbersLbl"
        android:orientation="horizontal"
        android:background="#1dd1a1">

        <ImageButton
            android:id="@+id/backBtnAddCar"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="Back"
            android:focusable="true"
            android:src="@drawable/ic_keyboard_backspace_white_24dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salsa"
            android:text="Añadir Coche"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/vehicle_brand_desc"
        android:drawableTop="@drawable/ic_directions_car_black_30dp"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/brandSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/vehicle_type_desc"
        android:drawableTop="@drawable/ic_directions_car_black_30dp"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/vehicle_color_desc"
        android:drawableTop="@drawable/ic_palette_black_30dp"
        android:textSize="25sp"/>

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"/>

    <Button
        android:id="@+id/addCar"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:backgroundTint="#1dd1a1"
        android:text="Añadir Coche" />


</LinearLayout>